--- a/css/cirkuits.css
+++ b/css/cirkuits.css
@@ -1327,4 +1327,10 @@ video {
   #contacto-background{
     display: none;
   }
+  #signin-link{
+    display: none;
+  }
+  #menu-dropdown{
+    width: 80%;
+  }
 }
